--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@mantine/core": "7.7.1",
     "@mantine/hooks": "7.7.1",
     "@tanstack/react-query": "5.29.0",
+    "@tanstack/react-virtual": "3.2.0",
+    "dayjs": "1.11.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "10.0.0",
     "react-router-dom": "6.22.3",
     "zod": "3.22.4"
   },
